# It_academy

./: README.md  pyproject.toml
Lesson_3/: Lesson_3.py
Lessons/: lesson_3.py
lesson_5/: lesson_5.py
lesson_6/: lesson_6.py
tasks/task_1/: pyproject.toml  task_1.py
tasks/task_2/: task_2_collections.py  task_2_functions.py
tasks/task_3/: task_3.py
