[tool.poetry]
name = "it-academy"
version = "0.1.0"
description = ""
authors = ["paveltas <124336776+paveltas@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "it_academy"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
