[tool.poetry]
name = "task-1"
version = "0.1.0"
description = ""
authors = ["paveltas <124336776+paveltas@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "task_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
